workspace = { members = [ "async-rust", "derek_banas_rust","http_client", "learn_rust_in_month_of_lunches", "operator_overloading", "practice", "typing_tutor"] }
[package]
name = "Rust-Learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
