[package]
name = "learn_rust_in_month_of_lunches"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rayon = "1.10.0"
reqwest = { version = "0.12.5",features = ["blocking"]}
serde = { version = "1.0.208",features = ["derive"] }
tokio-macros = { version = "0.2.0-alpha.6" }
serde_json = "1.0.125"
tokio = {version = "1.39.3" , features =["rt-multi-thread","macros"]}
